--- a/HelloAndroid/app/src/main/AndroidManifest.xml
+++ b/HelloAndroid/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        //안드로이드 앱 아이콘 및 제목 설정, 검은색 테마로 변경
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
