--- a/project_source/app/build.gradle
+++ b/project_source/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:appcompat-v7:23.2.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
 }
